[gd_scene load_steps=3 format=2]

[ext_resource path="res://stages/assets/checkpoint.gd" type="Script" id=1]
[ext_resource path="res://characters/player/sprites/mega_man/Idle.png" type="Texture" id=2]


[node name="Checkpoint01" type="Area2D"]
monitoring = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.184314, 0.184314, 0.184314, 1 )
texture = ExtResource( 2 )
hframes = 3

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="on_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="on_viewport_exited"]
